Refactors member GET endpoint to allow search methods with username query parameter.